# deep-learning-solutions

nli-ml_opensrc/: CMakeLists.txt
nli-ml_opensrc/dataset/test/: nli_ml_predict.csv  nli_ml_test.csv  readme.md
nli-ml_opensrc/src/: analytics.py  nli_model_v1_torchscript.pt  nliml.py  utils.py
src/: infra.py  nliml.cpp  nlimldriver.py
